tests/ui/mismatched_types/struct_pattern_on_tuple_enum_in_match.stderr
error[E0574]: expected struct, variant or union type, found enum `Foo`
  --> $DIR/struct_pattern_on_tuple_enum_in_match.rs:7:9
   |
LL |         Foo { i } => ()
   |         ^^^ not a struct, variant or union type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0574`.
